[package]
name = "mul-persistence-rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5.1", features =  ["async_tokio"] }
num-bigint = "0.4.4"
num-traits = "0.2.17"
num_cpus = "1.16.0"
rayon = "1.8.0"
tokio = { version = "1.34.0", features = ["full", "sync"] }

[[bench]]
name = "mp_testing"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
